--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -7,10 +7,9 @@ $color-white: #FFF5F5;
 
 // fonts 
 
+$font-0: 'Oswald', sans-serif;
 $font-1: 'Maven Pro', sans-serif;
-$font-2: 'Maven Pro', sans-serif;
-$font-3: sans-serif;
-$font-4: 'Droid Serif', serif;
+$font-2: 'Droid Serif', serif;
 
 //$font-2: 'IntroInline', sans-serif;
 
