--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,8 @@ Hero Image
     position: absolute;
     height: 100px;
     width: 100%;
-    top: 210px; }
+    top: 210px;
+    display: table; }
     @media only screen and (min-width: 768px) {
       .headerSection .headerWrap {
         top: 350px; } }
@@ -589,7 +590,11 @@ Animated Title
 
 -------------------------------- */
 div.main-content.container-lg {
-  top: 30%; }
+  margin: auto;
+  padding-bottom: 0;
+  top: 0;
+  display: table-cell;
+  vertical-align: middle; }
   @media only screen and (min-width: 1170px) {
     div.main-content.container-lg {
       top: -30px; } }
@@ -631,6 +636,69 @@ span span {
   -webkit-transform: perspective(1050px) rotateY(0deg) scale(0.5);
   display: inline-block; }
 
+/* -------------------------------- 
+
+Scroll down arrow icon
+
+-------------------------------- */
+@media only screen and (min-width: 1170px) {
+  .arrow-wrapper {
+    position: absolute;
+    top: -140px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100%;
+    height: 55px;
+    padding-top: 10px;
+    z-index: 99; }
+    .arrow-wrapper .arrow {
+      position: absolute;
+      display: inline-block;
+      width: 30px;
+      height: 6px; }
+    .arrow-wrapper .right {
+      transform: rotate(-35deg);
+      border-radius: 0px 3px 3px 1.5px;
+      margin-left: 21.5px; }
+    .arrow-wrapper .left {
+      transform: rotate(35deg);
+      border-radius: 3px 0 1px 3px; }
+    .arrow-wrapper .top {
+      background: transparent;
+      -webkit-animation: arrow 1.3s infinite;
+      -webkit-animation-delay: 0s;
+      animation: arrow 1.3s infinite;
+      animation-delay: 0s; }
+    .arrow-wrapper .middle {
+      background: transparent;
+      margin-top: 15px;
+      -webkit-animation: arrow 1.3s infinite;
+      -webkit-animation-delay: 0.2s;
+      animation: arrow 1.3s infinite;
+      animation-delay: 0.2s; }
+    .arrow-wrapper .bottom {
+      background: transparent;
+      margin-top: 30px;
+      -webkit-animation: arrow 1.3s infinite;
+      -webkit-animation-delay: 0.3s;
+      animation: arrow 1.3s infinite;
+      animation-delay: 0.3s; }
+  @-webkit-keyframes arrow {
+    0%, 50% {
+      background: transparent; }
+    75% {
+      background: #757575; }
+    100% {
+      background: #BDBDBD; } }
+  @keyframes arrow {
+    0%, 50% {
+      background: transparent; }
+    75% {
+      background: #757575; }
+    100% {
+      background: #BDBDBD; } } }
 /* -------------------------------- 
 
 Slider
@@ -993,69 +1061,6 @@ Slider Navigation
     .no-touch .slider-nav a:hover {
       background-color: rgba(0, 0, 0, 0.5); }
 
-/* -------------------------------- 
-
-Scroll down arrow icon
-
--------------------------------- */
-@media only screen and (min-width: 1170px) {
-  .arrow-wrapper {
-    position: absolute;
-    top: -140px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    width: 100%;
-    height: 55px;
-    padding-top: 10px;
-    z-index: 99; }
-    .arrow-wrapper .arrow {
-      position: absolute;
-      display: inline-block;
-      width: 30px;
-      height: 6px; }
-    .arrow-wrapper .right {
-      transform: rotate(-35deg);
-      border-radius: 0px 3px 3px 1.5px;
-      margin-left: 21.5px; }
-    .arrow-wrapper .left {
-      transform: rotate(35deg);
-      border-radius: 3px 0 1px 3px; }
-    .arrow-wrapper .top {
-      background: transparent;
-      -webkit-animation: arrow 1.3s infinite;
-      -webkit-animation-delay: 0s;
-      animation: arrow 1.3s infinite;
-      animation-delay: 0s; }
-    .arrow-wrapper .middle {
-      background: transparent;
-      margin-top: 15px;
-      -webkit-animation: arrow 1.3s infinite;
-      -webkit-animation-delay: 0.2s;
-      animation: arrow 1.3s infinite;
-      animation-delay: 0.2s; }
-    .arrow-wrapper .bottom {
-      background: transparent;
-      margin-top: 30px;
-      -webkit-animation: arrow 1.3s infinite;
-      -webkit-animation-delay: 0.3s;
-      animation: arrow 1.3s infinite;
-      animation-delay: 0.3s; }
-  @-webkit-keyframes arrow {
-    0%, 50% {
-      background: transparent; }
-    75% {
-      background: #757575; }
-    100% {
-      background: #BDBDBD; } }
-  @keyframes arrow {
-    0%, 50% {
-      background: transparent; }
-    75% {
-      background: #757575; }
-    100% {
-      background: #BDBDBD; } } }
 /* -------------------------------- 
 
 Main Content
